<?xml version="1.0"?>
<package format="3">
  <name>d1_nav_demo</name>
  <version>0.0.1</version>
  <description>D1 navigation demo: OpenVINS pose to Twist (Ubuntu compute; D1 maps to motion).</description>
  <maintainer email="robot@localhost">robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>traj_utils</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
